# esp32_uart_stm32_link

./: README.md  sdkconfig
main/: CMakeLists.txt  MyApp.h  idf_component.yml  main.cc  myApp.cc  stm32_comm.cc  stm32_comm.h
main/audio_codecs/: no_audio_codec.cc
main/board/: board.cc  board.h  compact_wifi_board_lcd.cc  wifi_board.cc
main/http/: http_server.cc
main/protocols/: websocket_protocol.cc  websocket_protocol.h
